Fix page 139 break

--- a/dos33.html
+++ b/dos33.html
@@ -6433,8 +6433,8 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
 38B4:BD 8C C0       113 <a class="f"    name="WEXIT"        >WEXIT       </a>LDA <a class="v" href="#Q6L"    >Q6L</a>,X       ;TO READ MODE.
 38B7:60             114             RTS             ;RETURN FROM WRITE.
                     115 *****************************
-                    116 *                           *
-<hr>                    117 *   7-BIT NIBL WRITE SUBRS  *                               ; === WRITRTN, Page <a class="page" name="page139">139</a> ===
+                    116 *                           *<hr class='page'>
+                    117 *   7-BIT NIBL WRITE SUBRS  *                               ; === WRITRTN, Page <a class="page" name="page139">139</a> ===
                     118 *                           *
                     119 *   A-REG OR'D PRIOR EXIT   *
                     120 *       CARRY CLEARED       *
